# git-py

./: .env  .gitignore  AGENTS.md  README.md  VERIFICATION.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BUGFIX_CURVE_GAP.md  BUG_31b22352_branch_colors.md  DEVELOPMENT_RULES.md  FEATURES.md  GRAPH_MIGRATION_PLAN.md  IMPLEMENTATION_PLAN.md  SWIMLANE_MIGRATION_PLAN.md  TEST_PLAN.md
src/: __init__.py  main.py
src/core/: __init__.py  diff_parser.py  exceptions.py  graph.py  graph_debug.py  graph_v2.py  models.py  operations.py  repository.py
src/ui/: __init__.py  main_window.py
src/utils/: __init__.py  async_worker.py  avatar.py  config.py  debug_mode.py  signals.py  theme.py
src/viewmodels/: __init__.py  branch_panel_viewmodel.py  commands.py  commit_panel_viewmodel.py  graph_viewmodel.py  main_viewmodel.py  repo_tabs_viewmodel.py
tests/: conftest.py
tests/core/: test_avatar.py  test_diff_parser.py  test_exceptions.py  test_graph.py  test_graph_debug.py  test_graph_v2.py  test_graph_v2_r3_1.py  test_operations.py  test_r1_1_merge_mid_state.py  test_r3_3_pull_no_upstream.py  test_r3_3_subprocess_encoding.py  test_r4_cleanup.py  test_repository.py  test_visual_feat_regression.py
tests/ui/: __init__.py  test_action_history.py  test_clone_dialog.py  test_commit_panel.py  test_conflict_dialog.py  test_diff_view_widget.py  test_graph_widget.py  test_left_panel.py  test_main_window.py  test_main_window_stash_toolbar.py  test_main_window_toolbar.py  test_qt_lifecycle_r2_6.py  (+8 more)
tools/: dump_graph_cells.py  reproduce_31b22352_bug.py
(+68 files in other folders)
